--- a/css/main.css
+++ b/css/main.css
@@ -263,13 +263,12 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  padding: 0;
-  margin: 0;
-}
-
+h6,
+p,
 ul,
 ol {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
@@ -281,6 +280,12 @@ img {
   display: block;
   width: 100%;
   height: auto;
+}
+
+body {
+  font-family: "Lexend", sans-serif;
+  color: #626687;
+  background-color: #ffffff;
 }
 
 .container {
@@ -301,4 +306,446 @@ img {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
+}
+
+.header {
+  position: relative;
+  height: 46px;
+  padding-top: 40px;
+  padding-bottom: 96px;
+}
+.header__link {
+  display: inline-flex;
+  align-items: center;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  transform: scale(1);
+  transition: transform 300ms linear;
+  color: #1b1c57;
+}
+.header__link:hover, .header__link:focus {
+  transform: scale(1.1);
+}
+.header__logo {
+  width: 36px;
+  height: 36px;
+  margin-right: 12px;
+}
+.header__btn {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.57;
+  border-radius: 32px;
+  border: transparent;
+  cursor: pointer;
+  padding: 12px 24px;
+  margin-left: 56px;
+  transform: scale(1);
+  transition: transform 300ms linear;
+  background-color: #d1fae5;
+  color: #047857;
+}
+.header__btn:hover, .header__btn:focus {
+  transform: scale(1.1);
+}
+.header__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 438px;
+  height: 494px;
+  z-index: -1;
+}
+.header__img--green {
+  left: 10%;
+  top: -25%;
+}
+
+.header-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-list {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+.header-list__item:not(:last-child) {
+  margin-right: 24px;
+}
+.header-list__link {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.28;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 32px;
+  padding: 8px 16px;
+  display: flex;
+  align-content: center;
+  transform: scale(1);
+  transition: transform 300ms linear, color 300ms linear;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #f0f3fd;
+}
+.header-list__link:hover, .header-list__link:focus {
+  transform: scale(1.1);
+  color: #047857;
+}
+.header-list__svg {
+  fill: currentColor;
+  margin-left: 10px;
+  height: 18px;
+  width: 18px;
+}
+
+.hero-leftblock {
+  max-width: 496px;
+  padding-top: 96px;
+  padding-bottom: 212px;
+  margin-right: 104px;
+  display: inline-block;
+}
+.hero-leftblock__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 1.25;
+  text-transform: capitalize;
+  margin-bottom: 24px;
+  width: 355px;
+  display: inline-block;
+  color: #1b1c57;
+}
+.hero-leftblock__text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.75;
+  opacity: 0.75;
+  margin-bottom: 32px;
+}
+.hero-leftblock__under-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 2;
+  color: #888b97;
+}
+
+.hero-form {
+  border: 1px solid #e0e3eb;
+  border-radius: 32px;
+  display: flex;
+  align-items: center;
+  width: 496px;
+  margin-bottom: 32px;
+  background-color: #ffffff;
+}
+.hero-form__img-search {
+  width: 24px;
+  height: 24px;
+  margin-left: 24px;
+}
+.hero-form__input {
+  padding: 16px 17px;
+  width: 303px;
+  border: transparent;
+  background-color: transparent;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.57;
+  color: #888b97;
+}
+.hero-form__btn {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.57;
+  background-color: #10b981;
+  border: transparent;
+  cursor: pointer;
+  border-radius: 32px;
+  padding: 13px 16px;
+  display: inline-flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 4px;
+  transform: scale(1);
+  transition: transform 300ms linear;
+  color: #ffffff;
+}
+.hero-form__btn:hover, .hero-form__btn:focus {
+  transform: scale(1.1);
+}
+.hero-form__svg {
+  fill: currentColor;
+  width: 24px;
+  height: 24px;
+}
+
+.hero-partner {
+  display: flex;
+  align-items: center;
+}
+.hero-partner__item:not(:last-child) {
+  margin-right: 32px;
+}
+.hero-partner__link {
+  display: inline-flex;
+  transform: scale(1);
+  transition: transform 300ms linear;
+}
+.hero-partner__link:hover, .hero-partner__link:focus {
+  transform: scale(1.1);
+}
+.hero-partner__img {
+  width: 82.75px;
+  height: 64px;
+}
+
+.hero-rightblock {
+  display: inline-block;
+}
+.hero-rightblock__img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 720px;
+  height: 720px;
+  z-index: -1;
+}
+
+.rightblock-list {
+  display: flex;
+  align-items: center;
+}
+.rightblock-list__flex {
+  display: flex;
+  align-items: center;
+}
+.rightblock-list__item {
+  border-radius: 32px;
+  padding: 24px;
+  background-color: #ffffff;
+}
+.rightblock-list__item:not(:last-child) {
+  margin-right: 16px;
+}
+.rightblock-list__img {
+  width: 56px;
+}
+.rightblock-list__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #1b1c57;
+}
+.rightblock-list__text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.67;
+  color: #68799f;
+}
+
+.rightblock-img {
+  display: flex;
+  align-items: center;
+}
+.recommen {
+  padding-bottom: 120px;
+}
+.recommen__flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.recommen__text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+  color: #f59e0b;
+}
+.recommen__text::before {
+  content: "";
+  width: 32px;
+  height: 1px;
+  margin-right: 8px;
+  border: 1px solid #f59e0b;
+}
+.recommen__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 1.25;
+  text-transform: capitalize;
+  color: #1b1c57;
+}
+
+.recommen-list {
+  display: flex;
+  align-items: center;
+}
+.recommen-list__item:not(:last-child) {
+  margin-right: 56px;
+}
+.recommen-list__btn {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.56;
+  border: 1px solid #e0e3eb;
+  border-radius: 32px;
+  padding: 12px 24px;
+  display: flex;
+  align-items: center;
+  transform: scale(1);
+  transition: transform 300ms linear, background-color 300ms linear;
+  background-color: transparent;
+  color: #888b97;
+}
+.recommen-list__btn:hover, .recommen-list__btn:focus {
+  transform: scale(1.1);
+  color: #047857;
+  background-color: #d1fae5;
+}
+.recommen-list__btn:hover .recommen-list__svg, .recommen-list__btn:focus .recommen-list__svg {
+  fill: #047857;
+}
+.recommen-list__svg {
+  fill: currentColor;
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+}
+
+.recommen-list-btn {
+  display: flex;
+  align-items: center;
+}
+.recommen-list-btn__item:not(:last-child) {
+  margin-right: 16px;
+}
+.recommen-list-btn__btn {
+  border-radius: 32px;
+  border: transparent;
+  padding: 12px 16px;
+  transform: scale(1);
+  transition: background-color 300ms linear, transform 300ms linear;
+  background-color: #e0e3eb;
+}
+.recommen-list-btn__btn:hover, .recommen-list-btn__btn:focus {
+  transform: scale(1.1);
+  background-color: #10b981;
+}
+.recommen-list-btn__btn:hover .recommen-list-btn__svg, .recommen-list-btn__btn:focus .recommen-list-btn__svg {
+  fill: #f0f3fd;
+}
+.recommen-list-btn__svg {
+  width: 28px;
+  height: 28px;
+  fill: #3c4563;
+}
+
+.recommen-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.recommen-card__item {
+  transform: scale(1);
+  transition: transform 300ms linear, box-shadow 300ms linear;
+}
+.recommen-card__item:not(:last-child) {
+  margin-right: 40px;
+}
+.recommen-card__item:hover, .recommen-card__item:focus {
+  transform: scale(1.05);
+}
+.recommen-card__img {
+  position: relative;
+}
+.recommen-card__first-content {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.recommen-card__title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.33;
+  color: #0e1735;
+}
+.recommen-card__price {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.6;
+  color: #3c4563;
+}
+.recommen-card__second-content {
+  display: flex;
+  align-items: center;
+}
+.recommen-card__under-img {
+  width: 40px;
+  margin-right: 16px;
+}
+.recommen-card__under-title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.33;
+  color: #0e1735;
+}
+.recommen-card__under-text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.57;
+  color: #888b97;
+}
+
+.recommen-card-position {
+  position: absolute;
+  bottom: 38%;
+  left: 16px;
+  padding: 8px 16px;
+  border-radius: 32px;
+  display: flex;
+  align-items: center;
+  background-color: #fee2e2;
+}
+.recommen-card-position--blue {
+  background-color: #dbeafe;
+}
+.recommen-card-position__svg {
+  margin-right: 10px;
+  width: 16px;
+  height: 16px;
+}
+.recommen-card-position__text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  color: #ef4444;
+}
+.recommen-card-position__text--blue {
+  color: #1d4ed8;
 }/*# sourceMappingURL=main.css.map */
