--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,9 @@
 @import './utils/reset';
 @import './utils/vars';
 @import './components/general';
+
+@import './components/header';
+@import './components/hero';
+@import './components/recommen';
+@import './components/sell';
+@import './components/review';
