--- a/css/main.css
+++ b/css/main.css
@@ -278,7 +278,6 @@ a {
 
 img {
   display: block;
-  width: 100%;
   height: auto;
 }
 
@@ -406,6 +405,11 @@ body {
   margin-left: 10px;
   height: 18px;
   width: 18px;
+  transform: rotate(0);
+  transition: transform 300ms linear;
+}
+.header-list__svg.active {
+  transform: rotate(180deg);
 }
 
 .header-menu {
@@ -414,7 +418,14 @@ body {
   padding: 10px;
   border-radius: 4px;
   width: 100%;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 300ms linear;
   background-color: #d1fae5;
+}
+.header-menu.active {
+  opacity: 1;
+  pointer-events: all;
 }
 .header-menu__link {
   font-style: normal;
@@ -437,6 +448,10 @@ body {
   padding-bottom: 212px;
   margin-right: 104px;
   display: inline-block;
+}
+.hero-leftblock__span {
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .hero-leftblock__title {
   font-style: normal;
@@ -539,17 +554,27 @@ body {
 
 .hero-rightblock {
   display: inline-block;
-}
-.hero-rightblock__img {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 600px;
+  z-index: -1;
+}
+.hero-rightblock__img {
   width: 720px;
   height: 720px;
-  z-index: -1;
+}
+.hero-rightblock__img--line {
+  position: absolute;
+  top: 145px;
+  right: 114px;
+  width: 522px;
+  height: 343px;
 }
 
 .rightblock-list {
+  position: absolute;
+  bottom: 34px;
+  left: 48px;
   display: flex;
   align-items: center;
 }
@@ -559,14 +584,17 @@ body {
 }
 .rightblock-list__item {
   border-radius: 32px;
-  padding: 24px;
   background-color: #ffffff;
 }
 .rightblock-list__item:not(:last-child) {
   margin-right: 16px;
 }
 .rightblock-list__img {
-  width: 56px;
+  margin-right: 16px;
+}
+.rightblock-list__after-photo {
+  margin-left: -15px;
+  margin-right: 15px;
 }
 .rightblock-list__title {
   font-style: normal;
@@ -586,6 +614,9 @@ body {
 .rightblock-img {
   display: flex;
   align-items: center;
+}
+.rightblock-img__item:not(:last-child) {
+  margin-right: -70px;
 }
 .recommen {
   padding-bottom: 120px;
@@ -640,6 +671,7 @@ body {
   padding: 12px 24px;
   display: flex;
   align-items: center;
+  cursor: pointer;
   transform: scale(1);
   transition: transform 300ms linear, background-color 300ms linear;
   background-color: transparent;
@@ -671,6 +703,7 @@ body {
   border-radius: 32px;
   border: transparent;
   padding: 12px 16px;
+  cursor: pointer;
   transform: scale(1);
   transition: background-color 300ms linear, transform 300ms linear;
   background-color: #e0e3eb;
@@ -690,10 +723,10 @@ body {
 
 .recommen-card {
   display: flex;
-  align-items: center;
   justify-content: space-around;
 }
 .recommen-card__item {
+  min-width: 340px;
   transform: scale(1);
   transition: transform 300ms linear, box-shadow 300ms linear;
 }
@@ -703,7 +736,7 @@ body {
 .recommen-card__item:hover, .recommen-card__item:focus {
   transform: scale(1.05);
 }
-.recommen-card__img {
+.recommen-card__content {
   position: relative;
 }
 .recommen-card__first-content {
@@ -749,7 +782,7 @@ body {
 
 .recommen-card-position {
   position: absolute;
-  bottom: 38%;
+  bottom: 12px;
   left: 16px;
   padding: 8px 16px;
   border-radius: 32px;
@@ -780,4 +813,132 @@ body {
 }
 .recommen-card-position__text--green {
   color: #047857;
+}
+
+.sell {
+  padding-bottom: 120px;
+  position: relative;
+}
+
+.sell-leftblock {
+  width: 524px;
+  margin-left: 40px;
+  margin-right: 148px;
+  display: inline-block;
+}
+.sell-leftblock__text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  text-transform: capitalize;
+  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+  color: #f59e0b;
+}
+.sell-leftblock__text::before {
+  content: "";
+  width: 32px;
+  height: 1px;
+  margin-right: 8px;
+  border: 1px solid #f59e0b;
+}
+.sell-leftblock__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 1.25;
+  text-transform: capitalize;
+  margin-bottom: 16px;
+  color: #1b1c57;
+}
+.sell-leftblock__under-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.75;
+  opacity: 0.75;
+  margin-bottom: 16px;
+  width: 413px;
+}
+.sell-leftblock__detail-text {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.75;
+  opacity: 0.75;
+  margin-bottom: 16px;
+  color: #1b1c57;
+}
+.sell-leftblock__span {
+  width: 440px;
+  height: 2px;
+  display: inline-block;
+  margin-top: 32px;
+  background-color: #f0f3fd;
+}
+
+.sell-leftblock-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 32px;
+  margin: -15px;
+}
+.sell-leftblock-list__item {
+  display: flex;
+  align-items: center;
+  width: calc((100% - 54px - 54px) / 2);
+  margin: 15px;
+}
+
+.sell-leftblock-down {
+  display: flex;
+  align-items: center;
+}
+.sell-leftblock-down__img {
+  margin-left: -30px;
+}
+.sell-leftblock-down__title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.33;
+  color: #0e1735;
+}
+.sell-leftblock-down__text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #888b97;
+}
+.sell-leftblock-down__btn {
+  margin-left: 57px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.57;
+  border: transparent;
+  border-radius: 32px;
+  display: flex;
+  align-items: center;
+  padding: 13px 16px;
+  transform: scale(1);
+  transition: transform 300ms linear;
+  background-color: #10b981;
+  color: #ffffff;
+}
+.sell-leftblock-down__btn:hover, .sell-leftblock-down__btn:focus {
+  transform: scale(1.1);
+}
+.sell-leftblock-down__svg {
+  margin-right: 16px;
+  fill: currentColor;
+}
+
+.sell-rightblock {
+  position: absolute;
+  top: 0;
+  right: 0;
 }/*# sourceMappingURL=main.css.map */
