--- a/css/main.css
+++ b/css/main.css
@@ -728,7 +728,7 @@ body {
 .recommen-card__item {
   min-width: 340px;
   transform: scale(1);
-  transition: transform 300ms linear, box-shadow 300ms linear;
+  transition: transform 300ms linear;
 }
 .recommen-card__item:not(:last-child) {
   margin-right: 40px;
@@ -986,4 +986,147 @@ body {
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.5);
+}
+
+.review {
+  padding-bottom: 120px;
+  position: relative;
+}
+.review__text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  text-transform: capitalize;
+  margin-bottom: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #f59e0b;
+}
+.review__text::before {
+  content: "";
+  width: 32px;
+  height: 1px;
+  margin-bottom: 8px;
+  border: 1px solid #f59e0b;
+}
+.review__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 40px;
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 40px;
+  color: #1b1c57;
+}
+.review__span {
+  position: absolute;
+  bottom: -32px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #3c4563;
+}
+.review__span::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  transform: translate(-16px);
+  background-color: #e0e3eb;
+}
+.review__span::after {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  transform: translate(16px);
+  background-color: #e0e3eb;
+}
+
+.review-list {
+  display: flex;
+  justify-content: center;
+}
+.review-list__item {
+  position: relative;
+}
+.review-list__item:not(:last-child) {
+  margin-right: 56px;
+}
+
+.review-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 56px);
+  width: 612px;
+  background-color: #ffffff;
+  padding: 32px;
+  box-shadow: 0px 9px 32px rgba(89, 92, 219, 0.05);
+  border-radius: 16px;
+}
+.review-content__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.25;
+  text-transform: capitalize;
+  margin-bottom: 16px;
+  color: #1b1c57;
+}
+.review-content__text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  opacity: 0.75;
+  margin-bottom: 24px;
+}
+
+.review-under-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.review-under-content__img {
+  display: inline-block;
+  margin-left: -30px;
+}
+.review-under-content__margin {
+  margin-right: auto;
+}
+.review-under-content__title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.57;
+  margin-bottom: 4px;
+  color: #0e1735;
+}
+.review-under-content__text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.57;
+  color: #888b97;
+}
+.review-under-content__flex {
+  display: flex;
+  align-items: center;
+}
+.review-under-content__span {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.4;
+  margin-left: 16px;
+  color: #3c4563;
 }/*# sourceMappingURL=main.css.map */
