--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -1,5 +1,5 @@
 .review {
-  padding-bottom: 120px;
+  padding-bottom: 130px;
   position: relative;
 
   &__text {
@@ -41,7 +41,7 @@
 
   &__span {
     position: absolute;
-    bottom: -32px;
+    bottom: -64px;
     left: 50%;
     transform: translate(-50%, -50%);
     display: inline-block;
@@ -96,7 +96,7 @@
 
   width: 612px;
   background-color: $main-bgc;
-  padding: 32px;
+  padding: 32px 32px 0 32px;
   box-shadow: 0px 9px 32px rgba(89, 92, 219, 0.05);
   border-radius: 16px;
 
