--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,12 +1,19 @@
 .hero {
+  &__position {
+    position: relative;
+    top: -136px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .hero-leftblock {
   max-width: 496px;
-  padding-top: 96px;
-  padding-bottom: 212px;
+  padding-top: 170px;
+  padding-bottom: 120px;
   margin-right: 104px;
   display: inline-block;
+  z-index: 2;
   &__span {
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
@@ -136,7 +143,6 @@
   position: absolute;
   top: 0;
   left: 600px;
-  z-index: -1;
 
   &__img {
     width: 720px;
@@ -164,7 +170,10 @@
     align-items: center;
   }
   &__item {
+    display: flex;
+    flex-shrink: 0;
     border-radius: 32px;
+    padding: 24px;
 
     background-color: $main-bgc;
 
@@ -175,11 +184,11 @@
 
   &__img {
     margin-right: 16px;
+    width: 56px;
   }
 
   &__after-photo {
-    margin-left: -15px;
-    margin-right: 15px;
+    width: 120px;
   }
 
   &__title {
@@ -204,13 +213,15 @@
 .rightblock-img {
   display: flex;
   align-items: center;
+  margin-right: 16px;
 
   &__item {
     &:not(:last-child) {
-      margin-right: -70px;
+      margin-right: -25px;
     }
   }
 
   &__img {
+    width: 56px;
   }
 }
