--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -1,5 +1,5 @@
 .review {
-  padding-bottom: 130px;
+  padding-bottom: 100px;
   position: relative;
 
   &__text {
@@ -96,7 +96,7 @@
 
   width: 612px;
   background-color: $main-bgc;
-  padding: 32px 32px 0 32px;
+  padding: 32px;
   box-shadow: 0px 9px 32px rgba(89, 92, 219, 0.05);
   border-radius: 16px;
 
@@ -126,8 +126,8 @@
   align-items: center;
   justify-content: space-between;
   &__img {
-    display: inline-block;
-    margin-left: -30px;
+    width: 40px;
+    margin-right: 24px;
   }
 
   &__margin {
@@ -156,6 +156,7 @@
   &__flex {
     display: flex;
     align-items: center;
+    align-self: end;
   }
 
   &__span {
