--- a/sass/components/_sell.scss
+++ b/sass/components/_sell.scss
@@ -104,6 +104,10 @@
     width: calc((100% - 54px - 54px) / 2);
     margin: 15px;
   }
+
+  &__svg {
+    margin-right: 16px;
+  }
 }
 
 .sell-leftblock-down {
