--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,6 @@
 @import './components/sell';
 @import './components/review';
 @import './components/partnership';
+@import './components/subscribe';
+
+@import './components/footer';
