add. fix is not. finish

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -129,7 +129,7 @@
     font-size: 14px;
     line-height: 1.28;
     text-transform: capitalize;
-    display: block;
+    display: inline-block;
 
     transform: rotate(0);
     transition: transform 300ms linear, color 300ms linear;
