--- a/css/main.css
+++ b/css/main.css
@@ -569,6 +569,7 @@ body {
   position: absolute;
   top: 0;
   left: 600px;
+  overflow: hidden;
 }
 .hero-rightblock__img {
   width: 720px;
@@ -836,6 +837,7 @@ body {
 
 .sell {
   padding-bottom: 120px;
+  overflow: hidden;
 }
 .sell__position {
   position: relative;
@@ -1031,6 +1033,7 @@ body {
 .review {
   padding-bottom: 100px;
   position: relative;
+  overflow: hidden;
 }
 .review__text {
   font-style: normal;
@@ -1193,6 +1196,7 @@ body {
 }
 .partner__content {
   text-align: center;
+  margin-bottom: 40px;
 }
 .partner__flex {
   display: flex;
@@ -1224,6 +1228,9 @@ body {
   line-height: 1.25;
   text-transform: capitalize;
   margin-bottom: 24px;
+  max-width: 424px;
+  margin-left: auto;
+  margin-right: auto;
   color: #1b1c57;
 }
 .partner__btn {
@@ -1234,7 +1241,6 @@ body {
   border-radius: 32px;
   border: transparent;
   padding: 12px 16px;
-  margin-bottom: 40px;
   cursor: pointer;
   transform: scale(1);
   transition: transform 300ms linear;
@@ -1591,7 +1597,7 @@ body {
   font-size: 14px;
   line-height: 1.28;
   text-transform: capitalize;
-  display: block;
+  display: inline-block;
   transform: rotate(0);
   transition: transform 300ms linear, color 300ms linear;
   color: #888b97;
