--- a/sass/components/_partnership.scss
+++ b/sass/components/_partnership.scss
@@ -18,6 +18,7 @@
 
   &__content {
     text-align: center;
+    margin-bottom: 40px;
   }
 
   &__flex {
@@ -54,6 +55,9 @@
     line-height: 1.25;
     text-transform: capitalize;
     margin-bottom: 24px;
+    max-width: 424px;
+    margin-left: auto;
+    margin-right: auto;
 
     color: $secondary-text;
   }
@@ -66,7 +70,6 @@
     border-radius: 32px;
     border: transparent;
     padding: 12px 16px;
-    margin-bottom: 40px;
     cursor: pointer;
     transform: scale(1);
     transition: transform 300ms linear;
