--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -24,3 +24,27 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
+
+.gold-text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  text-transform: capitalize;
+  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+  margin-left: -40px;
+  color: $gold-text;
+
+  &::before {
+    content: '';
+    width: 32px;
+    height: 1px;
+
+    margin-right: 8px;
+
+    border: 1px solid $gold-text;
+    background-color: $gold-text;
+  }
+}
